# episcopal-api

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  TODO.md
crates/api/src/: summary.rs
crates/calendar/: Cargo.toml  TODO.md
crates/calendar/src/: calendar.rs  date.rs  error.rs  feasts.rs  holy_day.rs  lib.rs  liturgical_day.rs  liturgical_week.rs  propers.rs  rank.rs  season.rs  transferred_feast.rs  year.rs
crates/calendar/src/bcp1979/: mod.rs
crates/calendar/src/lff2018/: mod.rs
crates/calendar/tests/: autogenerated_tests.rs
crates/canticle-table/: Cargo.toml
crates/canticle-table/src/: lib.rs
crates/export/web/: Cargo.toml
crates/export/web-component/src/: lib.rs
crates/export/web/src/: biblical_citation.rs  document.rs  fetch_reading.rs  lib.rs  lookup.rs  style.css
crates/language/: Cargo.toml
crates/language/src/: lib.rs
crates/lectionary/src/: lectionary.rs  lectionary_helpers.js  lib.rs  reading_type.rs
crates/lectionary/src/lectionaries/: bcp1979_daily_office_psalter.rs  bcp1979_office.rs  mod.rs  psalter_30day.rs  rcl.rs  rcl1.rs  rcl2.rs
crates/liturgy/: Cargo.toml
crates/liturgy/src/: biblical_citation.rs  biblical_reading.rs  canticle.rs  category.rs  choice.rs  condition.rs  display_format.rs  document.rs  gloria_patri.rs  heading.rs  lectionary_reading.rs  lib.rs  litany.rs  liturgy.rs  parallel.rs  path.rs  preces.rs  preference.rs  psalm.rs  psalm_citation.rs  reference.rs  responsive_prayer.rs  rubric.rs  sentence.rs  series.rs  subliturgy.rs  text.rs  version.rs  words.rs
crates/psalter/: Cargo.toml
crates/psalter/src/: lib.rs
crates/psalter/src/bcp1979/: mod.rs  psalm_001.rs  psalm_002.rs  psalm_003.rs  psalm_004.rs  psalm_006.rs  psalm_007.rs  psalm_008.rs  psalm_009.rs  psalm_010.rs  psalm_011.rs  psalm_012.rs  psalm_013.rs  psalm_014.rs  psalm_015.rs  psalm_016.rs  psalm_017.rs  psalm_018.rs  psalm_019.rs  psalm_020.rs  psalm_021.rs  psalm_022.rs  psalm_023.rs  psalm_024.rs  psalm_025.rs  psalm_026.rs  psalm_027.rs  psalm_028.rs  psalm_029.rs  psalm_030.rs  psalm_031.rs  psalm_032.rs  psalm_033.rs  psalm_034.rs  psalm_035.rs  psalm_036.rs  psalm_037.rs  psalm_038.rs  psalm_039.rs  psalm_040.rs  (+103 more)
crates/reference-parser/: Cargo.toml
crates/reference-parser/src/: book_abbrevs.rs  books.rs  lib.rs  query.rs  range.rs  utils.rs
crates/reference-parser/tests/: parsing_tests.rs
examples/api/: .gitignore  Cargo.toml  build.sh
examples/api/src/: calendar.rs  document.rs  error.rs  main.rs  psalm.rs
examples/api/static/: document.css  index.html
examples/api/static/assets/: document.css  document.js  index.js
examples/rest_api/: .gitignore  Cargo.toml
examples/rest_api/src/: calendar.rs  document.rs  error.rs  main.rs
examples/rest_api/static/assets/: index.js
examples/website/: .gitignore  Cargo.toml  build.rs  index.html
examples/website/src/: lib.rs  table_of_contents.rs
examples/website/src/components/: biblical_citation.rs  date.rs  document.rs  lookup.rs  menu.rs  mod.rs  toggle.rs
examples/website/src/templates/: api.rs  calendar.rs  canticle_table.rs  collects.rs  daily_office.rs  daily_readings.rs  holy_day.rs  index.rs  mod.rs  psalm.rs
examples/website/src/templates/document/: biblical_citation.rs  components.rs  lookup.rs  mod.rs
examples/website/src/utils/: dom.rs  input.rs  language.rs  mod.rs  time.rs
examples/website/static/: calendar.css  canticle-table.css  daily-readings.css  document.css  general.css  holy-day.css
examples/website/translations/: en-US.ftl  es-ES.ftl
