
[workspace]
members = [
  "crates/calendar",
  "crates/canticle-table",
  "crates/export/web",
  "crates/export/web-component",
  "crates/language",
  "crates/lectionary",
  "crates/library",
  "crates/liturgy",
  "crates/psalter",
  "crates/reference-parser",
  "examples/api",
  "examples/website"
]