[package]
name = "liturgy"
version = "0.1.0"
edition = "2018"

[dependencies]
calendar = { path = "../calendar" }
language = { path = "../language" }
reference-parser = { path = "../reference-parser" }
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
psalter = { path = "../psalter" }