[package]
name = "liturgy"
version = "0.1.0"
edition = "2018"

[dependencies]
calendar = { path = "../calendar" }
language = { path = "../language" }
lectionary = { path = "../lectionary" }
reference-parser = { path = "../reference-parser" }
serde = { version = "1.0", features = ["derive"]}
itertools = "0.10"

[dev-dependencies]
psalter = { path = "../psalter" }