[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
calendar = { path = "../../crates/calendar" }
lectionary = { path = "../../crates/lectionary" }
library = { path = "../../crates/library" }
liturgy = { path = "../../crates/liturgy" }
psalter = { path = "../../crates/psalter" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }