[package]
name = "rest_api"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
thiserror = "1.0"
chrono = "0.4"
serde_json = "1"
urlencoding = "2"
api = { path = "../../crates/api" }
calendar = { path = "../../crates/calendar" }
language = { path = "../../crates/language" }
lectionary = { path = "../../crates/lectionary" }
library = { path = "../../crates/library" }
liturgy = { path = "../../crates/liturgy" }
psalter = { path = "../../crates/psalter" }
web = { path = "../../crates/export/web" }